--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -6,6 +6,7 @@
     font-family: 'Montserrat', sans-serif;
 }
 
+
 /* Global CSS */
 body {
     background-color: #242424;
@@ -13,6 +14,7 @@ body {
     flex-direction: column;
     height: 100vh;
     justify-content: space-between;
+    overflow: hidden;
 }
 
 header,
